[All] POST requests from website to API in application/json; cleaned entire repo

--- a/website/application/static/style/create_post.css
+++ b/website/application/static/style/create_post.css
@@ -1,4 +1,7 @@
-body { align-items: center; margin-bottom: 15vh; }
+body {
+	align-items: center;
+	margin-bottom: 15vh;
+}
 
 form {
 	margin-top: 3vh;
