--- a/website/application/templates/admin.html
+++ b/website/application/templates/admin.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% block title %}Admin{% endblock %}
 
+
 {% block css %}
 	<link type="text/css" href="{{ url_for('static', filename='style/admin/tommy.css') }}">
 {% endblock %}
 
-{% block content %}
-{% endblock %}
+{% block content %}{% endblock %}
