--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -3,149 +3,166 @@
 	<head>
 		<title>Kevin | {% block title %}{% endblock %}</title>
 
-		<!-- STYLE -->
-		<link rel="icon" type="image/png" href="../static/img/favicon.png">
-		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/layout.css') }}">
-		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Stylish&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-		{% block css %}{% endblock %}
-
-		<!-- META -->
+		<!-- Meta -->
 		<meta charset="UTF-8">
 		<meta lang="en">
 		<meta name="author" content="Andreanelli Bartocetti Parri Mariotti">
 		<meta name="keywords" content="kevin forum">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		
+		<link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
+
+		<!-- CSS -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/icons_animations.css') }}">
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/layout.css') }}">
+		{% block css %}{% endblock %}
+
 		<!-- JS --> 
-		<script src="https://kit.fontawesome.com/2e6be9a3fe.js" crossorigin="anonymous"></script>
-		<script src="{{ url_for('static', filename='js/up.js') }}"></script>
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+		<script src="https://kit.fontawesome.com/2e6be9a3fe.js" crossorigin="anonymous"></script>
+		{% if (nav | default("there", false)) %} <script src="{{ url_for('static', filename='script/navbar.js') }}"></script> {% endif %}
+		<script src="{{ url_for('static', filename='script/cookie_popup.js') }}" defer></script>
 		{% block js %}{% endblock %}
+		{% if alert %} <script> alert("{{ alert }}"); </script> {% endif %}
 	</head>
 
-	<body>
-		{% if (nav|default("there", false)) %}
+	<body {% if (nav | default("there", false)) %} onload="update_navbar();" {% endif %}>
+		{% if (nav | default("there", false)) %}
 			<nav class="navbar navbar-expand-xl navbar-dark fixed-top topnav">
- 				<button class="menu btn navbar-toggler border-0 text-white" data-toggle="collapse" data-target="#collapse-target">
-					<span class="fas fa-ellipsis-h"> Menu</span>
-				</button>
 				<div class="collapse navbar-collapse" id="collapse-target">
-				<span><img class="logo" type="image/png" src="../static/img/Logo_white_nobackground.png" alt="Kevin's logo"></span>	
+					<a href="/">
+						<img class="logo" type="image/png" src="{{ url_for('static', filename='img/Logo_white_nobackground.png') }}" alt="Kevin">
+					</a>
+
 					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-home"></i> Home</button></a>
-						</li>
 						<li class="nav-item dropdown">
-							<a class="" data-target="dropdown_target" href="#" data-toggle="dropdown">
-								<button class="navbtn btn text-white hvr-icon-sink" type="button"><i class="hvr-icon fas fa-chevron-circle-down"></i> Dropdown</button></a>
+							<a href="#" data-target="dropdown_target" data-toggle="dropdown"></a>
+							<button class="navbtn btn text-white hvr-icon-sink" type="button"><i class="hvr-icon fas fa-chevron-circle-down"></i> Dropdown</button></a>
 							<div class="dropdown-menu" aria-labelledby="dropdown_target">
-								<a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="..">Action</a>
-								<a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="..">Another action</a>
-								<a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="..">Another action ancora</a>
+								<a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="#">Action</a>
+								<a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="#">Another action</a>
+								<a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="#">Another action ancora</a>
 							</div>
 						</li>
-						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-globe-europe"></i> News & Actuality</button></a>
+
+						<li class="navbar-item">
+								<a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
+									<i class="fas fa-globe-europe"></i> News & Actuality
+								</button> </a>
 						</li>
-						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-cat"></i> Meme</button></a>
+
+						<li class="navbar-item">
+							<a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
+								<i class="fas fa-cat"></i> Meme
+							</button> </a>
 						</li>
-						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-code"></i> Informatic</button></a>
+
+						<li class="navbar-item">
+							<a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
+								<i class="fas fa-code"></i> Programming
+							</button> </a>
 						</li>
-						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-flask"></i> Science</button></a>
+
+						<li class="navbar-item">
+							<a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
+								<i class="fas fa-flask"></i> Science
+							</button> </a>
 						</li>
-						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-feather-alt"></i> Dev's Blog</button></a>
+
+						<li class="navbar-item">
+							<a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
+								<i class="fas fa-feather-alt"></i> Dev's blog
+							</button> </a>
 						</li>
-						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fab fa-rocketchat"></i> AMA/Just Chatting</button></a>
+
+						<li class="navbar-item">
+							<a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
+								<i class="fab fa-rocketchat"></i> AMA / Just Chatting
+							</button> </a>
 						</li>
-						<li class="navbar-item" id="unlogged_button1">
-							<a href="../register" class="text-decoration-none unlogged_buttons"><button class="navbtn btn text-white" type="button"><i class="fas fa-user-plus"></i> Register</button></a>
+
+						<li class="navbar-item logged_buttons">
+							<a href="/create_post"> <button class="navbtn btn text-white logged buttons" type="button">
+								<i class="fas fa-plus-square"></i> Create Post
+							</button> </a>
 						</li>
-						<li class="navbar-item" id="unlogged_button2">
-							<a href="../login" class="text-decoration-none unlogged buttons"><button class="navbtn btn text-white" type="button"><i class="fas fa-sign-in-alt"></i> Login</button></a>
+
+						<li class="navbar-item logged_buttons">
+							<a href="/user"> <button class="navbtn btn text-white" type="button">
+								<i class="fas fa-user"></i> Profile
+							</button> </a>
 						</li>
-						<li class="navbar-item" id="logged_button1">
-							<a href="../create_post" class="text-decoration-none"><button class="navbtn btn text-white logged buttons" type="button"><i class="fas fa-plus-square"></i> Create Post</button></a>
+
+						<li class="navbar-item logged_buttons">
+							<a href="/logout"> <button class="navbtn btn text-white" type="button">
+								<i class="fas fa-sign-out-alt"></i> Logout
+							</button> </a>
 						</li>
-						<li class="navbar-item" id="logged_button2">
-							<a href="../user" class="text-decoration-none logged_buttons"><button class="navbtn btn text-white" type="button"><i class="fas fa-user"></i> Profile</button></a>
+
+						<li class="navbar-item unlogged_buttons">
+							<a href="/register"> <button class="navbtn btn text-white" type="button">
+								<i class="fas fa-user-plus"></i> Register
+							</button> </a>
 						</li>
-						<li class="navbar-item" id="logged_button3">
-							<a href="../logout" class="text-decoration-none logged_buttons"><button class="navbtn btn text-white" type="button"><i class="fas fa-sign-out-alt"></i> Logout</button></a>
+
+						<li class="navbar-item unlogged_buttons">
+							<a href="/login"> <button class="navbtn btn text-white" type="button">
+								<i class="fas fa-sign-in-alt"></i> Login
+							</button> </a>
 						</li>
 					</ul>
 				</div>
-			</nav>		
+			</nav>
 		{% endif %}
 
 		<main>{% block content %}{% endblock %}</main>
 
-		<div id="popup-lightbox">
+		<div id="popup-box">
 			<div id="cookie-popup">
 				<div id="popup-content">
 					<div id="popup-hey">Hey!</div>
 					<div id="popup-text">This site uses cookies. If you agree with that, click "I Agree"</i>. If you don't, we are sorry but you can't use our site.</div>
 					<div id="popup-buttons">
-						<a href="https://google.com"><span class="popup-button">I <b>DON'T</b> agree</span></a>
+						<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><span class="popup-button">I <b>DON'T</b> agree</span></a>
 						<span class="popup-button" onclick="close_cookie_popup();">I Agree</span>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		{% if (footer|default("there", false)) %}
+		{% if (footer | default("there", false)) %}
 			<footer class="foot fixed-bottom">
 				<div class="row text-center inline-block">
 					<div class="col-md">
-						<a href="#" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fas fa-users"></i> About</button></a>
-						<a href="#" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fas fa-tools"></i> Support</button></a>
-						<a href="https://github.com/TommyAnd/kevin" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fab fa-github"></i> Github</button></a>
-						<a href="#" class="text-decoration-none back-to-top" title="Torna su"><button class="btn fbutton hvr-icon-bob" type="button"><i class="hvr-icon far fa-arrow-alt-circle-up"></i></button></a>
+						<a href="#">
+							<button class="btn text-white fbutton" type="button">
+								<i class="fas fa-users"></i> About
+							</button>
+						</a>
+
+						<a href="#">
+							<button class="btn text-white fbutton" type="button">
+								<i class="fab fa-github"></i> Support
+							</button>
+						</a>
+
+						<a href="#">
+							<button class="btn text-white fbutton" type="button">
+								<i class="fab fa-github"></i> Github
+							</button>
+						</a>
+
+						<span class="back-to-top">
+							<button class="btn fbutton" type="button">
+								<i class="far fa-arrow-alt-circle-up"></i>
+							</button>
+						</span>
 					</div>
 				</div>
 			</footer>	
 		{% endif %}
 	</body>
-
-	<script>
-		function close_cookie_popup() {
-			var popup = document.getElementById("popup-lightbox");
-			popup.parentNode.removeChild(popup);
-			localStorage.setItem("cookie-accepted", 1);
-		}
-		
-		// Check if user has already accepted it
-		if (localStorage.getItem("cookie-accepted") == 1) {
-			close_cookie_popup();
-		}
-
-		{% if (nav|default("there",false)) %}
-			// Check if it's logged in
-			if (document.cookie.includes('access_token') && document.cookie.includes('refresh_token')) {
-				document.getElementById("unlogged_button1").style.display = 'none';
-				document.getElementById("unlogged_button2").style.display = 'none';
-				document.getElementById("logged_button1").style.display = 'unset';
-				document.getElementById("logged_button2").style.display = 'unset';
-				document.getElementById("logged_button3").style.display = 'unset';
-			} else {
-				document.getElementById("unlogged_button1").style.display = 'unset';
-				document.getElementById("unlogged_button2").style.display = 'unset';
-				document.getElementById("logged_button1").style.display = 'none';
-				document.getElementById("logged_button2").style.display = 'none';
-				document.getElementById("logged_button3").style.display = 'none';
-			}
-		{% endif %}
-
-		{% if alert %}
-			alert("{{alert}}");
-		{% endif %}
-	</script>
 </html>
