--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -32,6 +32,9 @@
 	<body {% if (nav | default("there", false)) %} onload="update_navbar();" {% endif %}>
 		{% if (nav | default("there", false)) %}
 			<nav class="navbar navbar-expand-xl navbar-dark fixed-top topnav">
+				 <button class="menu btn navbar-toggler border-0 text-white" data-toggle="collapse" data-target="#collapse-target">
+					<span class="fas fa-ellipsis-h"></span>
+				</button>
 				<div class="collapse navbar-collapse" id="collapse-target">
 					<a href="/">
 						<img class="logo" type="image/png" src="{{ url_for('static', filename='img/Logo_white_nobackground.png') }}" alt="Kevin">
@@ -145,7 +148,7 @@
 
 						<a href="#">
 							<button class="btn text-white fbutton" type="button">
-								<i class="fab fa-github"></i> Support
+								<i class="fas fa-tools"></i> Support
 							</button>
 						</a>
 
