--- a/website/application/templates/user.html
+++ b/website/application/templates/user.html
@@ -7,21 +7,30 @@
 {% endblock %}
 
 {% block content %}
-	<div class="flex">
-		<svg id="propic" height="200" width="200">
-			<circle cx="100" cy="100" r="100" stroke="black" stroke-width=".5" />
-		</svg>
-		<div class="flex2">
+	<div id="user">
+		<img id="propic" src="{{ url_for('static', filename='img/favicon.png') }}">
+		<div id="infos">
+			<div id="username">
+				<span id="username-text">{{ '@' + user['username'] }}</span>
+				{% if user["perms"] == 1 %}
+  					<span class="flag" id="mod">Moderator</span>
+				{% elif user["perms"] == 2 %}
+	  				<span class="flag" id="admin">Admin</span>
+				{% elif user["perms"] == 3 %}
+	  				<span class="flag" id="dev">Kevin's Dev</span>
+				{% endif %}
+			</div>
+
 			<div id="name">{{ user['name'] + ' ' + user['surname'] }}</div>
-			{% if user["perms"] == 1 %}
-  				<span class="flag" id="mod">Moderator</span>
-			{% elif user["perms"] == 2 %}
-  				<span class="flag" id="admin">Admin</span>
-			{% elif user["perms"] == 3 %}
-  				<span class="flag" id="owner">Owner</span>
+			<div id="bio">Lorem ipsum dolor sit amet<br>~ Unknown</div>
+
+			{% if owner %}
+				<a class="button" href="/settings"><i class="fas fa-user-cog"></i> <span>Settings</span></a>
+			{% elif following %}
+				<a class="button" href="#"><i class="fas fa-bell-slash"></i> <span>Remove from feed</span></a>
+			{% else %}
+				<a class="button" href="#"><i class="fas fa-bell"></i> <span>Add to feed</span></a>
 			{% endif %}
 		</div>
-		<div id="username">{{ '@' + user['username'] }}</div>
-		<div id="user_email">{{ user['email'] }}</div>
 	</div>
 {% endblock %}
