--- a/website/application/templates/register.html
+++ b/website/application/templates/register.html
@@ -19,6 +19,10 @@
 		<input type="email" name="email" placeholder="Email" required>
 		<input type="password" name="password" placeholder="Password" required>
 		<input type="password" name="cpassword" placeholder="Confim Password" required>
+		<span>
+			<input type="checkbox" name="keep_logged" id="checkbox">
+			<label for="checkbox">Keep me logged in</label>
+		</span>
 		<button>Register!</button>
 	</form>
 {% endblock %}
