--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -19,7 +19,7 @@
 		{% block css %}{% endblock %}
 
 		<!-- JS --> 
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 		<script src="https://kit.fontawesome.com/2e6be9a3fe.js" crossorigin="anonymous"></script>
@@ -158,7 +158,7 @@
 							</button>
 						</a>
 
-						<span class="back-to-top">
+						<span class="back-to-top" onclick="$('html, body').animate({scrollTop: 0}, 300);">
 							<button class="btn fbutton" type="button">
 								<i class="far fa-arrow-alt-circle-up"></i>
 							</button>
