--- a/website/application/static/style/user.css
+++ b/website/application/static/style/user.css
@@ -26,6 +26,7 @@
 #infos {
 	display: flex;
 	flex-direction: column;
+	min-width: 20vw;	
 }
 
 #username {
@@ -63,6 +64,7 @@
 }
 
 #bio {
+	margin-bottom: 2vh;
 	font-size: .9em;
 }
 
@@ -72,7 +74,7 @@
 	justify-content: center;
 	align-items: center;
 
-	margin-top: 3vh;
+	margin-top: 1vh;
 	border-radius: 9px;
 
 	font-size: 1.3em;
