--- a/website/application/templates/user.html
+++ b/website/application/templates/user.html
@@ -22,7 +22,7 @@
 			</div>
 
 			<div id="name">{{ user['name'] + ' ' + user['surname'] }}</div>
-			<div id="bio">Lorem ipsum dolor sit amet<br>~ Unknown</div>
+			<div id="bio">{{ user['bio'] }}</div>
 
 			{% if owner %}
 				<a class="button" href="/settings"><i class="fas fa-user-cog"></i> <span>Settings</span></a>
@@ -30,6 +30,10 @@
 				<a class="button" href="#"><i class="fas fa-bell-slash"></i> <span>Remove from feed</span></a>
 			{% else %}
 				<a class="button" href="#"><i class="fas fa-bell"></i> <span>Add to feed</span></a>
+			{% endif %}
+
+			{% if not owner and user['public_email'] %}
+				<a class="button" href="mailto:{{ user['email'] }}" target="_blank"><i class="fas fa-envelope"></i> <span>Contact</span></a>
 			{% endif %}
 		</div>
 	</div>
