--- a/website/application/templates/login.html
+++ b/website/application/templates/login.html
@@ -15,6 +15,6 @@
 			<input type="checkbox" name="keep_logged" id="checkbox">
 			<label for="checkbox">Keep me logged in</label>
 		</span>
-		<button>Login!</button>
+		<button id="login">Login!</button>
 	</form>
 {% endblock %}
