--- a/website/application/templates/create_post.html
+++ b/website/application/templates/create_post.html
@@ -7,10 +7,10 @@
 {% endblock %}
 
 {% block content %}
-	<h1 id="title">Crea post</h1>
+	<h1 id="title">Create post</h1>
 	<form method="GET" action="/create_post">
 		<textarea name="post_title" placeholder="Post Title (optional)" maxlength="100" col="127" id="post-title"></textarea>
 		<textarea name="post_body" placeholder="Post text" required maxlength="3000" id="post-body"></textarea>
-		<button id="send">Post <i class="fas fa-arrow-up"></i></button>
+		<button class="push-btn">Post <i class="fas fa-arrow-up"></i></button>
 	</form>
 {% endblock %}
