--- a/website/application/templates/settings.html
+++ b/website/application/templates/settings.html
@@ -26,6 +26,6 @@
 
     <div class="section-title">Danger Zone:</div>
     <div>
-        <button id="del-btn">Delete my Kevin account</button>
+        <button class="push-btn">Delete my Kevin account</button>
     </div>
 {% endblock %}
