--- a/website/application/templates/register.html
+++ b/website/application/templates/register.html
@@ -23,6 +23,6 @@
 			<input type="checkbox" name="keep_logged" id="checkbox">
 			<label for="checkbox">Keep me logged in</label>
 		</span>
-		<button id="login">Register!</button>
+		<button class="push-btn">Register!</button>
 	</form>
 {% endblock %}
