--- a/website/application/templates/settings.html
+++ b/website/application/templates/settings.html
@@ -15,17 +15,16 @@
         <div class="option-label">email visibile al pubblico</div>
     </div>
 
-    <div class="section-title">Change your:</div>
+    <div class="section-title">Change:</div>
     <div class="section-content">
-        <input type="text" placeholder="Username"><br>
-        <input type="text" placeholder="Password"><br>
-        <input type="text" placeholder="E-mail"><br>
-        <input type="text" placeholder="Name">
-        <input type="text" placeholder="Surname">
+        <button class="push-btn">Username</button><br>
+        <button class="push-btn">Password</button><br>
+        <button class="push-btn">E-mail</button><br>
+        <button class="push-btn">Name & Surname</button>
     </div>
 
-    <div class="section-title">Danger Zone:</div>
+    <div class="section-title" id="danger-days">Danger Zone:</div>
     <div>
-        <button class="push-btn">Delete my Kevin account</button>
+        <button class="push-btn del">Delete my Kevin account</button>
     </div>
 {% endblock %}
