[Website] Minor changes
Added buttons in login and register page

--- a/website/application/templates/login.html
+++ b/website/application/templates/login.html
@@ -17,4 +17,9 @@
 		</span>
 		<button class="push-btn">Login!</button>
 	</form>
+	<br>
+	<div class="redirect">
+		<div>Not a member?</div>
+		<a href="../register"><button class="push-btn">Register now!</button></a>
+	</div>
 {% endblock %}
