--- a/website/application/templates/register.html
+++ b/website/application/templates/register.html
@@ -25,4 +25,9 @@
 		</span>
 		<button class="push-btn">Register!</button>
 	</form>
+	<br>
+	<div class="redirect">
+		<div>Already a member?</div>
+		<a href="../login"><button class="push-btn">Login now!</button></a>
+	</div>
 {% endblock %}
