--- a/website/application/static/style/layout.css
+++ b/website/application/static/style/layout.css
@@ -168,6 +168,7 @@ input:not([type=checkbox]):focus {
 .push-btn {
 	height: 5vh;
 	min-height: 50px;
+	width: 20vw;
 	margin: 1vh 0 1vh 0;
 	background-color: #345DA7;
 	border: none;
