--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -142,6 +142,12 @@
 					<div class="col-md">
 						<a href="#">
 							<button class="btn text-white fbutton" type="button">
+								<i class="fab fa-github"></i>
+							</button>
+						</a>
+						
+						<a href="#">
+							<button class="btn text-white fbutton" type="button">
 								<i class="fas fa-users"></i> About
 							</button>
 						</a>
@@ -149,12 +155,6 @@
 						<a href="#">
 							<button class="btn text-white fbutton" type="button">
 								<i class="fas fa-tools"></i> Support
-							</button>
-						</a>
-
-						<a href="#">
-							<button class="btn text-white fbutton" type="button">
-								<i class="fab fa-github"></i> Github
 							</button>
 						</a>
 
