--- a/website/application/templates/register.html
+++ b/website/application/templates/register.html
@@ -19,15 +19,15 @@
 		<input type="email" name="email" placeholder="Email" required>
 		<input type="password" name="password" placeholder="Password" required>
 		<input type="password" name="cpassword" placeholder="Confim Password" required>
-		<span>
+		<span class="center cbox">
 			<input type="checkbox" name="keep_logged" id="checkbox">
 			<label for="checkbox">Keep me logged in</label>
 		</span>
-		<button class="push-btn">Register!</button>
+		<button class="push-btn fbtn center">Register!</button>
 	</form>
 	<br>
 	<div class="redirect">
-		<div>Already a member?</div>
-		<a href="../login"><button class="push-btn">Login now!</button></a>
+		<div class="center">Already a member?</div>
+		<a href="../login"><button class="push-btn fbtn">Login now!</button></a>
 	</div>
 {% endblock %}
