[Website] Centered post template in post.html and home.html

--- a/website/application/static/style/home.css
+++ b/website/application/static/style/home.css
@@ -3,8 +3,10 @@ main {
     justify-content: center;
 }
 
+/* Post */
+
 .post-container {
-	max-width: 50%;
+	max-width: 100%;
 	background-color: #ddeced;
 	border-radius: 8px;
     padding: 1vw;
