--- a/website/application/static/style/icons_animations.css
+++ b/website/application/static/style/icons_animations.css
@@ -41,7 +41,7 @@
 	border-radius: 5px !important;
 }
 
-.hvr-bounce-to-right:hover:before, .hvr-bounce-to-right:focus:before, .hvr-bounce-to-right:active:before {
+.hvr-bounce-to-right:hover::before, .hvr-bounce-to-right:focus::before, .hvr-bounce-to-right:active::before {
 	-webkit-transform: scaleX(1);
 	transform: scaleX(1);
 	-webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
@@ -169,10 +169,10 @@
 .hvr-icon-bob:hover .hvr-icon, .hvr-icon-bob:focus .hvr-icon, .hvr-icon-bob:active .hvr-icon {
 	-webkit-animation-name: hvr-icon-bob-float, hvr-icon-bob;
 	animation-name: hvr-icon-bob-float, hvr-icon-bob;
-	-webkit-animation-duration: .3s, 1.5s;
-	animation-duration: .3s, 1.5s;
-	-webkit-animation-delay: 0s, .3s;
-	animation-delay: 0s, .3s;
+	-webkit-animation-duration: 0.3s, 1.5s;
+	animation-duration: 0.3s, 1.5s;
+	-webkit-animation-delay: 0s, 0.3s;
+	animation-delay: 0s, 0.3s;
 	-webkit-animation-timing-function: ease-out, ease-in-out;
 	animation-timing-function: ease-out, ease-in-out;
 	-webkit-animation-iteration-count: 1, infinite;
