[All] Fixed codacy issues, updated .gitignore, updated requirements

--- a/website/application/static/style/icons_animations.css
+++ b/website/application/static/style/icons_animations.css
@@ -14,7 +14,7 @@
 	border-radius: 5px !important;
 }
 
-.hvr-bounce-to-right:before {
+.hvr-bounce-to-right::before {
 	content: "";
 	position: absolute;
 	z-index: -1;
