[All] Fixed api.py accessToken, added blank edit-user route

--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -90,7 +90,7 @@
 						</li>
 
 						<li class="navbar-item logged_buttons">
-							<a href="/create_post"> <button class="navbtn btn text-white logged buttons" type="button">
+							<a href="/create-post"> <button class="navbtn btn text-white logged buttons" type="button">
 								<i class="fas fa-plus-square"></i> Create Post
 							</button> </a>
 						</li>
