--- a/website/application/templates/register.html
+++ b/website/application/templates/register.html
@@ -13,12 +13,12 @@
 {% block content %}
 	<h1 id="title">Register</h1>
 	<form method="POST" action="/register" name="mainform" onsubmit="return check_passwords(this)">
-		<input type="text" name="name" placeholder="Name" required>
-		<input type="text" name="surname" placeholder="Surname" required>
-		<input type="text" name="username" placeholder="Username" required>
+		<input type="text" name="name" placeholder="Name" minlength="2" maxlenght="15" required>
+		<input type="text" name="surname" placeholder="Surname" minlength="2" maxlenght="15" required>
+		<input type="text" name="username" placeholder="Username" minlength="5" maxlength="20" required>
 		<input type="email" name="email" placeholder="Email" required>
-		<input type="password" name="password" placeholder="Password" required>
-		<input type="password" name="cpassword" placeholder="Confim Password" required>
+		<input type="password" name="password" placeholder="Password" minlength="8" maxlenght="35" required>
+		<input type="password" name="cpassword" placeholder="Confim Password" minlength="8" maxlenght="35" required>
 		<span class="center cbox">
 			<input type="checkbox" name="keep_logged" id="checkbox">
 			<label for="checkbox">Keep me logged in</label>
