--- a/website/application/static/style/settings.css
+++ b/website/application/static/style/settings.css
@@ -15,8 +15,12 @@
     margin-bottom: 4vh;
 }
 
-.flex {
-    display: flex;
+#btn {
+    color: white;
+}
+
+#btn:hover {
+    color: #345DA7;
 }
 
 #danger-days {
