--- a/website/application/templates/settings.html
+++ b/website/application/templates/settings.html
@@ -3,19 +3,23 @@
 
 
 {% block css %}
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/settings.css') }}" >
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/settings.css') }}">
+{% endblock %}
+
+{% block js %}
+    <script src="{{ url_for('static', filename='script/password_matching.js') }}"></script>
 {% endblock %}
 
 {% block content %}
     <div id="header">Settings</div>
 
     <div class="section-title">Change password:</div>
-    <form method="POST" class="section-content">
-        <input type="password" name="old_pw" placeholder="Old password" minlenght="8" maxlenght="35" required><br>
+    <form method="POST" class="section-content" onsubmit="return check_passwords(this)" action="/user/settings/change-pw">
+        <input type="password" name="opassword" placeholder="Old password" minlenght="8" maxlenght="35" required><br>
         
-        <input type="password" name="new_pw" placeholder="New password" minlenght="8" maxlenght="35" required><br>
+        <input type="password" name="password" placeholder="New password" minlenght="8" maxlenght="35" required><br>
         
-        <input type="password" name="conf_pw" placeholder="Confirm Password" minlenght="8" maxlenght="35" required><br>
+        <input type="password" name="cpassword" placeholder="Confirm Password" minlenght="8" maxlenght="35" required><br>
 
         <input type="submit" value="Submit changes" class="push-btn" id="btn">
     </form>
